--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@schematics/angular": "^14.0.4",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.8.3",
     "core-js": "^2.6.9",
     "cors": "^2.8.5",
     "express": "^4.17.1",
