--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "rxjs": "6.5.4",
     "tslib": "^2.0.0",
     "web-push": "^3.3.5",
-    "zone.js": "^0.11.6"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular/cli": "11.2.19",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular/cli": "12.2.17",
     "@angular/compiler-cli": "^12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^6.14.6",
